--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <![endif]-->
     </head>
     <body>
-      <h1>Samantha Spring</h1>
-      <h3>This is hard</h3>
+      <h1>Spooky Website from Hell</h1>
+      <h3>This is hard.</h3>
 
       <article>
-        <h4>TItle of article</h4>
+        <h4>But not that hard.</h4>
         <img src="img/tree3.jpg" width"10%">
         <p>This website is going to make no sense</p>
         <a href="http://www.weather.com" target="_blank">Click here for the weather.</a>
